revisoes finais 5out

--- a/src/app/avaliation/CardioPulmunar/cooper/cooper.component.html
+++ b/src/app/avaliation/CardioPulmunar/cooper/cooper.component.html
@@ -21,8 +21,7 @@
                                 <button type="button">{{evaluation[pointer].data | date:'dd/LL/yyyy'}}</button>
                             </th>
                             <th class="th-top" *ngIf="addEval">
-                                <input name="data" #data="ngModel" [ngModel]="newEvaluation.data" type="date"
-                                    class="data-input" readonly>
+                                <input name="data" #data="ngModel" [ngModel]="newEvaluation.data" type="date" class="data-input">
                             </th>
                         </tr>
                     </thead>
