--- a/src/app/avaliation/composicao-corporal/cc.component.html
+++ b/src/app/avaliation/composicao-corporal/cc.component.html
@@ -31,9 +31,9 @@
                     <mat-card-header>
                         <mat-card-subtitle i18n="Subtitle">Faulkner - 4 dobras</mat-card-subtitle>
                     </mat-card-header>
-                    <mat-card-footer>
+ <!--                    <mat-card-footer>
                         <small>Homens</small>
-                    </mat-card-footer>
+                    </mat-card-footer> -->
                 </mat-card>
                 <mat-card routerLink="/guedes3">
                     <mat-card-header>
