--- a/src/app/avaliation/composicao-corporal/dexa/dexa.component.html
+++ b/src/app/avaliation/composicao-corporal/dexa/dexa.component.html
@@ -339,13 +339,7 @@
                     </button>
                 </div>
             </form>
-
-            <!--         <div class="graphics">
-            <ngx-charts-pie-chart i18n [view]="view" [scheme]="colorScheme" [results]="chartValues" [gradient]="gradient"
-                [legend]="showLegend" [legendPosition]="legendPosition" [labels]="showLabels" [doughnut]="isDoughnut"
-                >
-            </ngx-charts-pie-chart>
-        </div> -->
         </div>
     </div>
+    <app-overlay *ngIf="spinner"></app-overlay>
 </div>
