--- a/src/app/avaliation/CardioPulmunar/cureton/cureton.component.html
+++ b/src/app/avaliation/CardioPulmunar/cureton/cureton.component.html
@@ -22,8 +22,7 @@
                                 <button type="button">{{evaluation[pointer].data | date:'dd/LL/yyyy'}}</button>
                             </th>
                             <th class="th-top" *ngIf="addEval">
-                                <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
-                                    class="data-input">
+                                <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date" class="data-input">
                             </th>
                         </tr>
                     </thead>
