--- a/src/app/avaliation/componente-morfologica/st/st.component.html
+++ b/src/app/avaliation/componente-morfologica/st/st.component.html
@@ -59,7 +59,7 @@
                             </td>
                         </tr>
                         <tr class="table-row-subtitle">
-                            <th [attr.colspan]="pointer>=1 ? 3 : 2" i18n class="sub-line">Diâmetros</th>
+                            <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" i18n class="sub-line">Diâmetros</th>
                         </tr>
                         <tr>
                             <th i18n><span (click)="openDialog('Joelho')">Joelho</span> <small> (cm)</small></th>
@@ -100,7 +100,7 @@
                         </tr>
 
                         <tr class="table-row-subtitle">
-                            <th [attr.colspan]="pointer>=1 ? 3 : 2" i18n class="sub-line">Dobras Cutâneas</th>
+                            <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" i18n class="sub-line">Dobras Cutâneas</th>
                         </tr>
                         <tr>
                             <th i18n><span (click)="openDialog('Tricipital')">Tricipital</span> <small> (mm)</small>
@@ -185,7 +185,7 @@
                         </tr>
 
                         <tr class="table-row-subtitle">
-                            <th [attr.colspan]="pointer>=1 ? 3 : 2" i18n class="sub-line">Perímetros</th>
+                            <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" i18n class="sub-line">Perímetros</th>
                         </tr>
                         <tr>
                             <th i18n><span (click)="openDialog('Braço Contraído')">Braço contraído</span> <small>
@@ -240,7 +240,7 @@
                         </tr>
                         <!-- RESULTADOS -->
                         <tr class="table-row-subtitle">
-                            <th [attr.colspan]="pointer>=1 ? 3 : 2" i18n class="sub-line">RESULTADOS</th>
+                            <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" i18n class="sub-line">RESULTADOS</th>
                         </tr>
                         <tr>
                             <th i18n><span (click)="openDialog('Endomorfia')">Endomorfia</span></th>
@@ -428,4 +428,5 @@
             </form>
         </div>
     </div>
+    <app-overlay *ngIf="spinner"></app-overlay>
 </div>
