--- a/src/app/avaliation/composicao-corporal/balanca/balanca.component.html
+++ b/src/app/avaliation/composicao-corporal/balanca/balanca.component.html
@@ -150,7 +150,7 @@
                             </td>
                         </tr>
                         <tr class="form-subtitle">
-                            <td [attr.colspan]="pointer>=1 ? 3 : 2">&nbsp;</td>
+                            <td [attr.colspan]="pointer>=1 || addEval ? 3 : 2">&nbsp;</td>
                         </tr>
                         <tr>
                             <th><span (click)="openDialog('Membros Superiores Dir')">Membros Superiores Dir
@@ -257,7 +257,7 @@
                             </td>
                         </tr>
                         <!--                     <tr class="form-subtitle">
-                        <td [attr.colspan]="pointer>=1 ? 3 : 2">&nbsp;</td>
+                        <td [attr.colspan]="pointer>=1 || addEval ? 3 : 2">&nbsp;</td>
                     </tr> -->
                         <tr>
                             <th><span (click)="openDialog('Peso Ósseo')">Peso Ósseo <small>(Kg)</small></span></th>
@@ -303,7 +303,7 @@
                         </tr>
 
                         <!--                     <tr class="form-subtitle">
-                        <td [attr.colspan]="pointer>=1 ? 3 : 2">&nbsp;</td>
+                        <td [attr.colspan]="pointer>=1 || addEval ? 3 : 2">&nbsp;</td>
                     </tr> -->
 
                         <tr>
@@ -348,7 +348,7 @@
                         </tr>
 
                         <!--                     <tr class="form-sub-title>">
-                        <td [attr.colspan]="pointer>=1 ? 3 : 2">&nbsp;</td>
+                        <td [attr.colspan]="pointer>=1 || addEval ? 3 : 2">&nbsp;</td>
                     </tr> -->
 
                         <tr>
@@ -429,7 +429,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td [attr.colspan]="pointer>=1 ? 3 : 2" class="form-subtitle">&nbsp;</td>
+                            <td [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="form-subtitle">&nbsp;</td>
                         </tr>
                         <tr>
                             <th><span (click)="openDialog('Classificação')">Classificação</span></th>
@@ -482,4 +482,5 @@
 
         </div>
     </div>
+    <app-overlay *ngIf="spinner"></app-overlay>
 </div>
