--- a/src/app/avaliation/evaluation/evaluation.component.scss
+++ b/src/app/avaliation/evaluation/evaluation.component.scss
@@ -15,6 +15,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  &-content{
+    width: 100%;
+  }
 
   h1 {
     margin-top: 40px;
@@ -46,8 +49,8 @@ form {
 }
 
 @media only screen and (min-width: 768px) {
-  .section {
-    width: 425px !important;
+  .section-content{
+    width: 520px !important;
     h1 {
       width: 100%;
     }
