--- a/src/app/avaliation/flexibilidade/fleximetro/fleximetro.component.html
+++ b/src/app/avaliation/flexibilidade/fleximetro/fleximetro.component.html
@@ -22,7 +22,7 @@
                     </thead>
                     <tbody>
                         <tr class="table-row-subtitle">
-                            <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line" i18n><span
+                            <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="sub-line" i18n><span
                                     (click)="openDialog('Cervical')">Cervical</span></th>
                         </tr>
                         <tr>
@@ -82,7 +82,7 @@
                         </tr>
 
                         <tr class="table-row-subtitle">
-                            <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line" i18n><span
+                            <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="sub-line" i18n><span
                                     (click)="openDialog('Ombro')">Ombro</span></th>
                         </tr>
                         <tr>
@@ -140,7 +140,7 @@
                         </tr>
 
                         <tr class="table-row-subtitle">
-                            <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line" i18n><span
+                            <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="sub-line" i18n><span
                                     (click)="openDialog('Cotovelo')">Cotovelo</span></th>
                         </tr>
                         <tr>
@@ -164,31 +164,31 @@
                         </tr>
 
                         <tr class="table-row-subtitle">
-                            <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line" i18n><span
+                            <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="sub-line" i18n><span
                                     (click)="openDialog('Antebraço')">Antebraço</span></th>
                         </tr>
                         <tr>
                             <th i18n><span
                                     (click)="openDialog('Antebraço - Supinação/Pronação')">Supinação/Pronação</span>
                             </th>
-                            <td *ngIf="pointer>=1 && !addEval && editPointer!=1">{{evaluation[pointer-1].antbsp}}&deg;
+                            <td *ngIf="pointer>=1 && !addEval && editPointer!=1">{{evaluation[pointer-1].antebsp}}&deg;
                             </td>
                             <td *ngIf="editPointer==1 && editAv">
-                                <input name="antbsp" #antbsp="ngModel" [(ngModel)]="newEvaluation.antbsp" type="number"
+                                <input name="antebsp" #antebsp="ngModel" [(ngModel)]="newEvaluation.antebsp" type="number"
                                     (focus)="$event.target.select()">
                             </td>
-                            <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].antbsp}}&deg;</td>
+                            <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].antebsp}}&deg;</td>
                             <td *ngIf="editPointer==0 && editAv">
-                                <input name="antbsp" #antbsp="ngModel" [(ngModel)]="newEvaluation.antbsp" type="number"
+                                <input name="antebsp" #antebsp="ngModel" [(ngModel)]="newEvaluation.antebsp" type="number"
                                     (focus)="$event.target.select()">
                             </td>
                             <td *ngIf="addEval">
-                                <input name="antbsp" #antbsp="ngModel" [(ngModel)]="newEvaluation.antbsp" type="number">
+                                <input name="antebsp" #antebsp="ngModel" [(ngModel)]="newEvaluation.antebsp" type="number">
                             </td>
                         </tr>
 
                         <tr class="table-row-subtitle">
-                            <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line" i18n><span
+                            <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="sub-line" i18n><span
                                     (click)="openDialog('Punho')">Punho</span></th>
                         </tr>
                         <tr>
@@ -227,7 +227,7 @@
                             </td>
                         </tr>
                         <tr class="table-row-subtitle">
-                            <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line" i18n><span
+                            <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="sub-line" i18n><span
                                     (click)="openDialog('Tronco')">Tronco</span></th>
                         </tr>
                         <tr>
@@ -286,7 +286,7 @@
                         </tr>
 
                         <tr class="table-row-subtitle">
-                            <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line" i18n><span
+                            <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="sub-line" i18n><span
                                     (click)="openDialog('Quadril')">Quadril</span></th>
                         </tr>
                         <tr>
@@ -347,7 +347,7 @@
                         </tr>
 
                         <tr class="table-row-subtitle">
-                            <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line" i18n><span
+                            <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="sub-line" i18n><span
                                     (click)="openDialog('Joelho')">Joelho</span></th>
                         </tr>
                         <tr>
@@ -370,8 +370,8 @@
                         </tr>
 
                         <tr class="table-row-subtitle">
-                            <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line" i18n><span
-                                    (click)="openDialog('Tormnozelo')">Tornozelo</span></th>
+                            <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="sub-line" i18n><span
+                                    (click)="openDialog('Tornozelo')">Tornozelo</span></th>
                         </tr>
                         <tr>
                             <th i18n><span (click)="openDialog('Tornozelo - Flexão Dorsal/Planar')">Flexão
@@ -458,6 +458,7 @@
                 </div>
             </form>
             <div class="section-info">
+                <br />
                 Tabela de referência
                 <br />
                 <table class="table">
@@ -667,4 +668,5 @@
         </div>
 
     </div>
+    <app-overlay *ngIf="spinner"></app-overlay>
 </div>
