--- a/src/app/avaliation/flexibilidade/flexiteste/flexiteste.component.html
+++ b/src/app/avaliation/flexibilidade/flexiteste/flexiteste.component.html
@@ -28,7 +28,7 @@
                             </thead>
                             <tbody>
                                 <tr class="table-row-subtitle">
-                                    <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line"><span
+                                    <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="sub-line"><span
                                             (click)="openDialog('Punho - Flexão')">Flexão</span></th>
                                 </tr>
                                 <tr>
@@ -128,7 +128,7 @@
                                     <td *ngIf="addEval">&nbsp;</td>
                                 </tr>
                                 <tr class="table-row-subtitle">
-                                    <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line"><span
+                                    <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="sub-line"><span
                                             (click)="openDialog('Punho - Extensão')">Extensão</span></th>
                                 </tr>
                                 <tr>
@@ -293,7 +293,7 @@
                             </thead>
                             <tbody>
                                 <tr class="table-row-subtitle">
-                                    <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line"><span
+                                    <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="sub-line"><span
                                             (click)="openDialog('Cotovelo - Flexão')">Flexão</span></th>
                                 </tr>
                                 <tr>
@@ -401,7 +401,7 @@
                                 </tr>
 
                                 <tr class="table-row-subtitle">
-                                    <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line"><span
+                                    <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="sub-line"><span
                                             (click)="openDialog('Cotovelo - Extensão')">Extensão</span></th>
                                 </tr>
                                 <tr>
@@ -563,7 +563,7 @@
                             </thead>
                             <tbody>
                                 <tr class="table-row-subtitle">
-                                    <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line"><span
+                                    <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="sub-line"><span
                                             (click)="openDialog('Ombro - Abdução')">Abdução</span></th>
                                 </tr>
                                 <tr>
@@ -663,7 +663,7 @@
                                 </tr>
 
                                 <tr class="table-row-subtitle">
-                                    <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line"><span
+                                    <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="sub-line"><span
                                             (click)="openDialog('Ombro - Extensão')">Extensão</span></th>
                                 </tr>
                                 <tr>
@@ -860,7 +860,7 @@
                                 </tr>
 
                                 <tr class="table-row-subtitle">
-                                    <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line"><span
+                                    <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="sub-line"><span
                                             (click)="openDialog('Tronco - Flexão Lateral')">Flexão Lateral</span></th>
                                 </tr>
                                 <tr>
@@ -1026,7 +1026,7 @@
                             </thead>
                             <tbody>
                                 <tr class="table-row-subtitle">
-                                    <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line"><span
+                                    <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="sub-line"><span
                                             (click)="openDialog('Quadril - Flexão')">Flexão</span></th>
                                 </tr>
                                 <tr>
@@ -1125,7 +1125,7 @@
                                 </tr>
 
                                 <tr class="table-row-subtitle">
-                                    <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line"><span
+                                    <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="sub-line"><span
                                             (click)="openDialog('Quadril - Extensão')">Extensão</span></th>
                                 </tr>
                                 <tr>
@@ -1223,7 +1223,7 @@
                                     <td *ngIf="addEval">&nbsp;</td>
                                 </tr>
                                 <tr class="table-row-subtitle">
-                                    <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line"><span
+                                    <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="sub-line"><span
                                             (click)="openDialog('Quadril - Abdução')">Abdução</span></th>
                                 </tr>
                                 <tr>
@@ -1321,7 +1321,7 @@
                                 </tr>
 
                                 <tr class="table-row-subtitle">
-                                    <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line"><span
+                                    <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="sub-line"><span
                                             (click)="openDialog('Quadril - Adução')">Adução</span></th>
                                 </tr>
                                 <tr>
@@ -1485,7 +1485,7 @@
                             </thead>
                             <tbody>
                                 <tr class="table-row-subtitle">
-                                    <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line"><span
+                                    <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="sub-line"><span
                                             (click)="openDialog('Joelho - Flexão')">Flexão</span></th>
                                 </tr>
                                 <tr>
@@ -1585,7 +1585,7 @@
                                 </tr>
 
                                 <tr class="table-row-subtitle">
-                                    <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line"><span
+                                    <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="sub-line"><span
                                             (click)="openDialog('Punho - Extensão')">Extensão</span></th>
                                 </tr>
                                 <tr>
@@ -1751,7 +1751,7 @@
                             </thead>
                             <tbody>
                                 <tr class="table-row-subtitle">
-                                    <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line"><span
+                                    <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="sub-line"><span
                                             (click)="openDialog('Pés - Flexão')">Flexão</span></th>
                                 </tr>
                                 <tr>
@@ -1849,7 +1849,7 @@
                                 </tr>
 
                                 <tr class="table-row-subtitle">
-                                    <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line"><span
+                                    <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="sub-line"><span
                                             (click)="openDialog('Pés - Extensão')">Extensão</span></th>
                                 </tr>
                                 <tr>
@@ -2006,7 +2006,7 @@
                             </thead>
                             <tbody>
                                 <tr class="table-row-subtitle">
-                                    <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line"><span
+                                    <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="sub-line"><span
                                             (click)="openDialog('Membros Superiores')">Membros Superiores</span></th>
                                 </tr>
                                 <tr>
@@ -2030,7 +2030,7 @@
                                 </tr>
 
                                 <tr class="table-row-subtitle">
-                                    <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line"><span
+                                    <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="sub-line"><span
                                             (click)="openDialog('Membros Inferiores')">Membros Inferiores</span></th>
                                 </tr>
                                 <tr>
@@ -2053,7 +2053,7 @@
                                         {{+evaluation[pointer].mid + +evaluation[pointer].mie}}</td>
                                 </tr>
                                 <tr class="table-row-subtitle">
-                                    <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line"><span>Total Geral</span>
+                                    <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="sub-line"><span>Total Geral</span>
                                     </th>
                                 </tr>
                                 <tr>
@@ -2127,5 +2127,5 @@
             </form>
         </div>
     </div>
-
+    <app-overlay *ngIf="spinner"></app-overlay>
 </div>
