--- a/src/app/avaliation/flexibilidade/goniometro/goniometro.component.html
+++ b/src/app/avaliation/flexibilidade/goniometro/goniometro.component.html
@@ -25,7 +25,7 @@
                         </thead>
                         <tbody>
                             <tr class="table-row-subtitle">
-                                <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line"><span
+                                <th [attr.colspan]="pointer>=1 || addMesure ? 3 : 2" class="sub-line"><span
                                         (click)="openDialog('Ombro')">Ombro</span></th>
                             </tr>
                             <tr>
@@ -147,7 +147,7 @@
                                 </td>
                             </tr>
                             <tr class="table-row-subtitle">
-                                <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line"><span
+                                <th [attr.colspan]="pointer>=1 || addMesure ? 3 : 2" class="sub-line"><span
                                         (click)="openDialog('Cotovelo')">Cotovelo</span></th>
                             </tr>
                             <tr>
@@ -189,7 +189,7 @@
                                 </td>
                             </tr>
                             <tr class="table-row-subtitle">
-                                <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line"><span
+                                <th [attr.colspan]="pointer>=1 || addMesure ? 3 : 2" class="sub-line"><span
                                         (click)="openDialog('Radioulnar')">Radioulnar</span></th>
                             </tr>
                             <tr>
@@ -235,7 +235,7 @@
                                 </td>
                             </tr>
                             <tr class="table-row-subtitle">
-                                <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line"><span
+                                <th [attr.colspan]="pointer>=1 || addMesure ? 3 : 2" class="sub-line"><span
                                         (click)="openDialog('Punho')">Punho</span></th>
                             </tr>
                             <tr>
@@ -380,7 +380,7 @@
                         </thead>
                         <tbody>
                             <tr class="table-row-subtitle">
-                                <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line"><span
+                                <th [attr.colspan]="pointer>=1 || addMesure ? 3 : 2" class="sub-line"><span
                                         (click)="openDialog('Quadril')">Quadril</span></th>
                             </tr>
                             <tr>
@@ -502,7 +502,7 @@
                                 </td>
                             </tr>
                             <tr class="table-row-subtitle">
-                                <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line"><span
+                                <th [attr.colspan]="pointer>=1 || addMesure ? 3 : 2" class="sub-line"><span
                                         (click)="openDialog('Joelho')">Joelho</span></th>
                             </tr>
                             <tr>
@@ -525,7 +525,7 @@
                                 </td>
                             </tr>
                             <tr class="table-row-subtitle">
-                                <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line"><span
+                                <th [attr.colspan]="pointer>=1 || addMesure ? 3 : 2" class="sub-line"><span
                                         (click)="openDialog('Tornozelo')">Tornozelo</span></th>
                             </tr>
                             <tr>
@@ -650,7 +650,7 @@
                         </button>
                         <button type="button" *ngIf="addMesure" mat-stroked-button color="default"
                             (click)="closeInputs()">
-                            <mat-icon class="mat-18" coloe="warn">close</mat-icon>
+                            <mat-icon class="mat-18" color="warn">close</mat-icon>
                         </button>
                         <button *ngIf="addMesure" mat-stroked-button>
                             <mat-icon class="mat-18" color="accent">check</mat-icon>
@@ -681,7 +681,7 @@
                         </thead>
                         <tbody>
                             <tr class="table-row-subtitle">
-                                <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line"><span
+                                <th [attr.colspan]="pointer>=1 || addMesure ? 3 : 2" class="sub-line"><span
                                         (click)="openDialog('Cervical')">Cervical</span></th>
                             </tr>
                             <tr>
@@ -761,7 +761,7 @@
                                 </td>
                             </tr>
                             <tr class="table-row-subtitle">
-                                <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line"><span
+                                <th [attr.colspan]="pointer>=1 || addMesure ? 3 : 2" class="sub-line"><span
                                         (click)="openDialog('Lombar')">Lombar</span></th>
                             </tr>
                             <tr>
@@ -888,5 +888,5 @@
         </mat-tab-group>
         </div>
     </div>
-
+    <app-overlay *ngIf="spinner"></app-overlay>
 </div>
