--- a/src/app/avaliation/frm/frm.component.html
+++ b/src/app/avaliation/frm/frm.component.html
@@ -22,7 +22,7 @@
                     </thead>
                     <tbody>
                         <tr class="table-row-subtitle">
-                            <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line" i18n><span
+                            <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="sub-line" i18n><span
                                     (click)="openDialog('Membros Inferiores')">Membros Inferiores</span></th>
                         </tr>
                         <tr>
@@ -53,7 +53,7 @@
                         </tr>
 
                         <tr class="table-row-subtitle">
-                            <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line" i18n><span
+                            <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="sub-line" i18n><span
                                     (click)="openDialog('Abdominal')">Abdominal</span></th>
                         </tr>
                         <tr>
@@ -83,7 +83,7 @@
                         </tr>
 
                         <tr class="table-row-subtitle">
-                            <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line" i18n><span
+                            <th [attr.colspan]="pointer>=1 || addEval ? 3 : 2" class="sub-line" i18n><span
                                     (click)="openDialog('Membros Superiores')">Membros Superiores</span></th>
                         </tr>
                         <tr>
@@ -416,4 +416,5 @@
             </div>
         </div>
     </div>
+    <app-overlay *ngIf="spinner"></app-overlay>
 </div>
