--- a/src/app/avaliation/antropometria/vogel/vogel.component.html
+++ b/src/app/avaliation/antropometria/vogel/vogel.component.html
@@ -134,11 +134,11 @@
                             <td *ngIf="addEval">{{newEvaluation.altura | number: '': locale}}</td>
                         </tr>
                         <tr>
-                            <th><span (click)="openHelpDialog('Peso corporal')">Peso corporal <small>(m)</small></span></th>
-                            <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].altura | number: '': locale}}
+                            <th><span (click)="openHelpDialog('Peso corporal')">Peso corporal <small>(Kg)</small></span></th>
+                            <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].peso | number: '': locale}}
                             </td>
-                            <td *ngIf="pointer>=0">{{evaluation[pointer].altura | number: '': locale}}</td>
-                            <td *ngIf="addEval">{{newEvaluation.altura | number: '': locale}}</td>
+                            <td *ngIf="pointer>=0">{{evaluation[pointer].peso | number: '': locale}}</td>
+                            <td *ngIf="addEval">{{newEvaluation.peso | number: '': locale}}</td>
                         </tr>
                         <tr>
                             <th>Idade</th>
